recursion.logo.lessons.recursion.logo.koch.HexaKoch.scala.error
HexaKoch:5: error: not found: value pentaKoch
  pentaKoch(levels-1,length*0.4)
  ^