recursion.logo.lessons.recursion.logo.koch.HexaKoch.scala.code
def drawCurve(levels:Int, length:Double) {
    hexaKoch(levels, length);
}
def hexaKoch(levels:Int, length:Double) {
  pentaKoch(levels-1,length*0.4)
  left(120)
  hexaKoch(levels-1,length*0.4)
  right(60)
  hexaKoch(levels-1,length*0.4)
  right(60)
  hexaKoch(levels-1,length*0.4)
  right(60)
  hexaKoch(levels-1,length*0.4)
right(60)
  hexaKoch(levels-1,length*0.4)
  left(120)
  hexaKoch(levels-1,length*0.4)
}

